# tethys-data-models

./: README.md  pyproject.toml
src/tethys_data_models/: __init__.py  base.py  dataset.py  geometry.py  permit.py  plan.py  utils.py
