[project]
name = "tethys-data-models"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "quinnhornblow", email = "quinn.hornblow@protonmail.com" }
]
dependencies = [
    "orjson>=3.10.7",
    "pydantic>=2.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.6.9",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tethys_data_models"]
